# explorations

./: .gitignore  LICENSE  README.md  dummy  to_read_later.md
arrticles/drafts/: about_ai_art.md  about_rust.md
articles/drafts/: about_ai_art.md  future_things_for_the_readme.md
artwork/: creative_process.md
artwork/1-rough_drafts_and_ideas/: list.md
artwork/generative/done/nannou/particle_system_1/: Cargo.toml
artwork/generative/done/vulkan/vulkano_tutorial/: README.md
artwork/generative/in_progress/nannou/_grid_template/: Cargo.toml
artwork/generative/in_progress/nannou/explorers_and_settlers/: Cargo.toml
artwork/generative/in_progress/nannou/explorers_and_settlers/src/: main.rs
artwork/generative/in_progress/vulkan/particle_system_2/: Cargo.toml  README.md
artwork/generative/nannou/_grid_template/src/: main.rs
artwork/generative/nannou/_template/: Cargo.toml
artwork/generative/nannou/explorers_and_settlers/: Cargo.toml
artwork/generative/nannou/explorers_and_settlers/src/: agent.rs  cell.rs  grid.rs  main.rs
artwork/generative/nannou/particle_system_2/: Cargo.toml  README.md
artwork/generative/nannou/particle_system_2/src/: compute.rs  main.rs
artwork/generative/nannou/particle_system_2/src/shaders/: vertex.glsl
artwork/generative/shaders/particles/: vertex.glsl
drafts/: additional_thoughts_about_ai_art.md  future_things_for_the_readme.md
games/Godot/Godot 4 First Contact/: icon.svg.import  node_2d.tscn  project.godot
nannou/_template/src/: main.rs
nannou/done/particle_system_1/: Cargo.toml
nannou/explorers_and_settlers/src/: main.rs
nannou/particle_system/: Cargo.toml
nannou/particle_system/src/: main.rs
tutorials/solidity/zombie_game/: contract.sol  zombie_factory.sol  zombie_feeding.sol
tutorials/vulkan/cpp/vkguide/: README.md
tutorials/vulkan/cpp/vulkan-tutorial/: README.md
tutorials/vulkan/rust/vulkano_tutorial/: README.md
weird_chatgpt/: 20230103_i_love_you.md  20230106_rust_borrowed_types.md  README.md  i_love_you.md
(+8 files in other folders)
