[package]
name = "_template"
description = "A simple mesmerizing particle system. The second of many to come."
authors = ["Rafael Beckel <beckel+nannou@vista.art>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18"